<resources>
    <string name="app_name">FarmBook</string>
    <string name="Login">LOGIN</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="Registro">Registrar</string>
    <string name="CadastropraLogin">Não tem uma conta? Cadastre-se já!</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="usuario">Usuario</string>
    <string name="adicione_uma_imagem">Adicione uma Imagem</string>
    <string name="Criador">Criador</string>
    <string name="link">Link</string>
    <string name="items">Items</string>
    <string name="criar">Criar</string>
    <string name="nome_da_farm">Nome da farm</string>
    <string name="criar_farm">Criar Farm</string>
    <string name="criador_da_farm">Criador da farm</string>
    <string name="voltar_ao_login">Voltar ao login</string>
    <string name="logout">Logout</string>
    <string name="youtubelink">Youtubelink</string>
    <string name="producao">Producao</string>
    <string name="voltar">Voltar</string>

</resources>