<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="16dp"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvfnome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/nome_da_farm"
                android:fontFamily="@font/minecraftfont"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/tvfproducao"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/producao"
                android:fontFamily="@font/minecraftfont"
                android:textColor="@color/black"
                android:textSize="12dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"/>


        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="60dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvfcriador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/criador_da_farm"
                android:textColor="@color/black"
                android:fontFamily="@font/minecraftfont"
                android:textSize="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/tvflink"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:text="@string/youtubelink"
                android:textColor="@color/black"
                android:fontFamily="@font/minecraftfont"
                android:textSize="12dp"
                android:autoLink="web"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"/>


        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>